--- a/elk/logstash/docker-compose-example.yml
+++ b/elk/logstash/docker-compose-example.yml
@@ -3,4 +3,4 @@ services:
   logstash-send:
     image: docker.elastic.co/logstash/logstash:8.15.3
     volumes:
-      - ./logstash.conf:/usr/share/logstash/pipeline/
+      - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
