--- a/elk/makefile
+++ b/elk/makefile
@@ -1,2 +1,5 @@
-logstash-example:
-	docker compose -f logstash/docker-compose-example.yml up
+logstash-run:
+	docker compose -f logstash/docker-compose.yml up
+
+elasticsearch-run:
+	docker compose -f elastic-kibana/docker-compose.yml up
