--- a/elk/elastic-kibana/docker-compose.yml
+++ b/elk/elastic-kibana/docker-compose.yml
@@ -1,23 +1,30 @@
-version: "3.7"
+version: '3.8'
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.0.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.10.1
     container_name: elasticsearch
-    restart: always
     environment:
       - discovery.type=single-node
-    volumes:
-      - ./elasticsearch-data:/usr/share/elasticsearch/data
+      - xpack.security.enabled=false
+      - bootstrap.memory_lock=true
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
     ports:
-      - 9200:9200
-    expose:
-      - 9200:9200
+      - "9200:9200"
+    volumes:
+      - es_data:/usr/share/elasticsearch/data
+
   kibana:
+    image: docker.elastic.co/kibana/kibana:8.10.1
     container_name: kibana
-    image: docker.elastic.co/kibana/kibana:8.11.3
-    restart: always
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      - 5601:5601
+    ports:
+      - "5601:5601"
     depends_on:
       - elasticsearch
+
+volumes:
+  es_data:
